src/Components/Login.css
.Login-View {
    display: flex;
    flex: 1;
    justify-content: center;
    margin-top: 10pt;
    min-height: calc(100vh - 40pt);
    background: linear-gradient(#000000, #182815 );
}

.Login {
    display: flex;
    flex-direction: column;
    /* flex: 1; */
    /* align-self: center; */
    margin: 40pt;
    padding: 20pt;
    background-color: rgba(255, 255, 255, 0.05);
    border-radius: 5pt;
}

.Login-Title {
    display: flex;
    align-self: center;
    color: white;
    font-family: Urbanist;
    font-size: 40pt;
}

.Input {
    display: flex;
    height: 25pt;
    /* margin-top: 20pt; */
    background-color: rgba(255, 255, 255, 0.1);
    color: white;
    border-radius: 5pt;
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;
    font-family: Urbanist;
    font-size: 15pt;
    padding: 10pt;
}

.Login-Password-Input {
    display: flex;
    margin: 20pt;
    justify-content: space-between;
    align-items: center;
    border-radius: 5pt;
}

.Password-Input {
    display: flex;
    flex: 0.85;
    height: 25pt;
    color: white;
    background-color: rgba(255, 255, 255, 0.1);
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;
    font-family: Urbanist;
    font-size: 15pt;
    padding: 10pt;
    border-radius: 5pt;
}

.Password-Input-Eye {
    display: flex;
    flex: 0.15;
    font-size: 20pt;
    color: white;
}

.Password-Input-Eye:hover {
    cursor: pointer;
}

.Login-Forgot-Password {
    display: flex;
    align-self: flex-end;
    margin-right: 30pt;
    color: white;
}

.Login-Forgot-Password:hover {
    cursor: pointer;
    text-decoration: underline;
}

.Login-Buttons {
    display: flex;
    justify-content: center;

}

.Button {
    display: flex;
    justify-content: center;
    align-self: center;
    padding: 10pt;
    margin-top: 20pt;
    border-radius: 5pt;
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;
    background-color: rgba(255, 255, 255, 0.1);
    color: white;
    font-family: Urbanist;
    font-size: 20pt;
    font-weight: bold;
}

.Button:hover {
    background-color: rgba(255, 255, 255, 0.9);
    color: black;
    cursor: pointer;
}

.Profile {
    display: flex;
    flex-direction: column;
    color: white;
    font-family: Urbanist;
    font-size: 15pt;
    /* background-color: tomato; */

}

.Profile-Welcome {
    display: flex;
    align-self: center;
    margin: 40pt;
    font-size: 30pt;
}

.Profile-Item {
    display: flex;
    width: 100%;
    margin-bottom: 10pt;
    align-self: flex-start;
    border-bottom: 2pt solid white;
}

.Profile-Item-Content {
    display: flex;
    flex: 0.5
}

